# LineofbalanceReact

./: .gitignore  pyproject.toml
frontend/: index.html  package-lock.json  package.json  start-dev.cjs
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: LOBChart.jsx  SparklineGrid.jsx  StageTable.jsx
frontend/src/pages/: AgentChat.jsx  Alerts.jsx  Bottlenecks.jsx  Overview.jsx  Pharmacy.jsx  Simulation.jsx
src/hospital_lob/: __init__.py  main.py
src/hospital_lob/api/: __init__.py  main.py
src/hospital_lob/api/routes/: alerts.py  bottlenecks.py  chat.py  data.py  metrics.py  pharmacy.py  simulation.py
src/hospital_lob/config/: agents.yaml  settings.py  tasks.yaml
src/hospital_lob/crews/: alerting_crew.py  lob_analysis_crew.py  pharmacy_crew.py  simulation_crew.py
src/hospital_lob/dashboard/: app.py
src/hospital_lob/dashboard/views/: agent_chat.py  alerts.py  bottlenecks.py  overview.py  pharmacy.py  simulation.py
src/hospital_lob/data/: mock_generator.py  pharmacy_generator.py  store.py
src/hospital_lob/models/: __init__.py  alert.py  metrics.py  patient.py  pharmacy.py
src/hospital_lob/tools/: _compat.py  bottleneck_analyzer.py  data_query_tool.py  fhir_connector.py  lob_chart_generator.py  metrics_calculator.py  pharmacy_metrics.py  simulation_engine.py
