[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-lob-ai"
version = "0.1.0"
description = "Agentic AI framework for Line of Balance workflow in hospitals"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "simpy>=4.1.0",
    "faker>=30.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
hospital-lob = "hospital_lob.main:main"

[tool.setuptools.packages.find]
where = ["src"]
